[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "e-x"
authors = [
    { name = "The Electrum developers" },
]
description = "Server implementation for the Electrum protocol"
keywords = ["asyncio", "bitcoin", "electrum", "electrum-server"]
readme = "README.md"
license = "MIT"
license-files = ["LICENCE"]
requires-python = ">=3.10"
dependencies = [
    "aiorpcx[ws]>=0.25.0,<0.26",
    "aiohttp>=3.3,<4",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet",
]
dynamic = ['version']

[project.urls]
Homepage = "https://github.com/spesmilo/electrumx"
Repository = "https://github.com/spesmilo/electrumx"

[project.scripts]
electrumx_server = "electrumx.cli.electrumx_server:main"
electrumx_rpc = "electrumx.cli.electrumx_rpc:main"

[tool.setuptools.dynamic]
version = { attr = 'electrumx.__version__' }

[project.optional-dependencies]
# DB_ENGINE choices. The user MUST install at least one.
leveldb = [
    "plyvel",
]
rocksdb = [
    "rocksdb-ng",  # Felix's fork. ref https://github.com/f321x/python-rocksdb
]
# misc
dev = [
    "objgraph",
]
orjson = [
    "orjson>=3,<4",
]
uvloop = [
    "uvloop>=0.14",
]
# For various altcoins
blake256 = ["blake256>=0.1.1", ]
crypto = ["pycryptodomex>=3.8.1", ]
groestl = ["groestlcoin-hash>=1.0.1", ]
tribushashm = ["tribushashm>=1.0.5", ]
xevan-hash = ["xevan-hash", ]
dash_hash = ["dash_hash>=1.4", ]
zny-yespower-0-5 = ["zny-yespower-0-5", ]
